src/llvm/wrapper/core/value.nim


# proc getOperandUse*(val: ValueRef; index: cuint): UseRef {.cdecl, importc: "LLVMGetOperandUse", dynlib: LLVMlib.}
#     ##  Obtain the use of an operand at a specific index in a llvm::User value.
#     ##
#     ##  @see llvm::User::getOperandUse()

# proc setOperand*(user: ValueRef; index: cuint; val: ValueRef) {.cdecl, importc: "LLVMSetOperand", dynlib: LLVMlib.}
#     ##  Set an operand at a specific index in a llvm::User value.
#     ##
#     ##  @see llvm::User::setOperand()

# proc getNumOperands*(val: ValueRef): cint {.cdecl, importc: "LLVMGetNumOperands", dynlib: LLVMlib.}
#     ##  Obtain the number of operands in a llvm::User value.
#     ##
#     ##  @see llvm::User::getNumOperands()


# ##  This section contains APIs for interacting with LLVMValueRef that
# ##  correspond to llvm::Constant instances.
# ##
# ##  These functions will work for any LLVMValueRef in the llvm::Constant
# ##  class hierarchy.
# proc constNull*(ty: TypeRef): ValueRef {.cdecl, importc: "LLVMConstNull", dynlib: LLVMlib.}
#     ##  Obtain a constant value referring to the null instance of a type.
#     ##
#     ##  @see llvm::Constant::getNullValue()
#     ##  all zeroes

# proc constAllOnes*(ty: TypeRef): ValueRef {.cdecl, importc: "LLVMConstAllOnes", dynlib: LLVMlib.}
#     ##  Obtain a constant value referring to the instance of a type
#     ##  consisting of all ones.
#     ##
#     ##  This is only valid for integer types.
#     ##
#     ##  @see llvm::Constant::getAllOnesValue()

# proc getUndef*(ty: TypeRef): ValueRef {.cdecl, importc: "LLVMGetUndef", dynlib: LLVMlib.}
#     ##  Obtain a constant value referring to an undefined value of a type.
#     ##
#     ##  @see llvm::UndefValue::get()

# proc isNull*(val: ValueRef): Bool {.cdecl, importc: "LLVMIsNull", dynlib: LLVMlib.}
#     ##  Determine whether a value instance is null.
#     ##
#     ##  @see llvm::Constant::isNullValue()

# proc constPointerNull*(ty: TypeRef): ValueRef {.cdecl, importc: "LLVMConstPointerNull", dynlib: LLVMlib.}
#     ##  Obtain a constant that is a constant pointer pointing to NULL for a
#     ##  specified type.


# ##  Functions in this group model LLVMValueRef instances that correspond
# ##  to constants referring to scalar types.
# ##
# ##  For integer types, the LLVMTypeRef parameter should correspond to a
# ##  llvm::IntegerType instance and the returned LLVMValueRef will
# ##  correspond to a llvm::ConstantInt.
# ##
# ##  For floating point types, the LLVMTypeRef returned corresponds to a
# ##  llvm::ConstantFP.
# proc constInt*(intTy: TypeRef; n: culonglong; signExtend: Bool): ValueRef {.cdecl, importc: "LLVMConstInt", dynlib: LLVMlib.}
#     ##  Obtain a constant value for an integer type.
#     ##
#     ##  The returned value corresponds to a llvm::ConstantInt.
#     ##
#     ##  @see llvm::ConstantInt::get()
#     ##
#     ##  @param IntTy Integer type to obtain value of.
#     ##  @param N The value the returned instance should refer to.
#     ##  @param SignExtend Whether to sign extend the produced value.

# proc constIntOfArbitraryPrecision*(intTy: TypeRef; numWords: cuint;words: ptr uint64T): ValueRef {.cdecl, importc: "LLVMConstIntOfArbitraryPrecision", dynlib: LLVMlib.}
#     ##  Obtain a constant value for an integer of arbitrary precision.
#     ##
#     ##  @see llvm::ConstantInt::get()

# proc constIntOfString*(intTy: TypeRef; text: cstring;radix: uint8T): ValueRef {.cdecl, importc: "LLVMConstIntOfString", dynlib: LLVMlib.}
#     ##  Obtain a constant value for an integer parsed from a string.
#     ##
#     ##  A similar API, LLVMConstIntOfStringAndSize is also available. If the
#     ##  string's length is available, it is preferred to call that function
#     ##  instead.
#     ##
#     ##  @see llvm::ConstantInt::get()

# proc constIntOfStringAndSize*(intTy: TypeRef; text: cstring; sLen: cuint;radix: uint8T): ValueRef {. cdecl, importc: "LLVMConstIntOfStringAndSize", dynlib: LLVMlib.}
#     ##  Obtain a constant value for an integer parsed from a string with
#     ##  specified length.
#     ##
#     ##  @see llvm::ConstantInt::get()

# proc constReal*(realTy: TypeRef; n: cdouble): ValueRef {.cdecl, importc: "LLVMConstReal", dynlib: LLVMlib.}
#     ##  Obtain a constant value referring to a double floating point value.

# proc constRealOfString*(realTy: TypeRef; text: cstring): ValueRef {.cdecl, importc: "LLVMConstRealOfString", dynlib: LLVMlib.}
#     ##  Obtain a constant for a floating point value parsed from a string.
#     ##
#     ##  A similar API, LLVMConstRealOfStringAndSize is also available. It
#     ##  should be used if the input string's length is known.

# proc constRealOfStringAndSize*(realTy: TypeRef; text: cstring;sLen: cuint): ValueRef {. cdecl, importc: "LLVMConstRealOfStringAndSize", dynlib: LLVMlib.}
#     ##  Obtain a constant for a floating point value parsed from a string.

# proc constIntGetZExtValue*(constantVal: ValueRef): culonglong {.cdecl, importc: "LLVMConstIntGetZExtValue", dynlib: LLVMlib.}
#     ##  Obtain the zero extended value for an integer constant value.
#     ##
#     ##  @see llvm::ConstantInt::getZExtValue()

# proc constIntGetSExtValue*(constantVal: ValueRef): clonglong {.cdecl, importc: "LLVMConstIntGetSExtValue", dynlib: LLVMlib.}
#     ##  Obtain the sign extended value for an integer constant value.
#     ##
#     ##  @see llvm::ConstantInt::getSExtValue()

# proc constRealGetDouble*(constantVal: ValueRef; losesInfo: ptr Bool): cdouble {.cdecl, importc: "LLVMConstRealGetDouble", dynlib: LLVMlib.}
#     ##  Obtain the double value for an floating point constant value.
#     ##  losesInfo indicates if some precision was lost in the conversion.
#     ##
#     ##  @see llvm::ConstantFP::getDoubleValue


# ##  Functions in this group operate on composite constants.
# proc constStringInContext*(c: ContextRef; str: cstring; length: cuint;dontNullTerminate: Bool): ValueRef {.cdecl, importc: "LLVMConstStringInContext", dynlib: LLVMlib.}
#     ##  Create a ConstantDataSequential and initialize it with a string.
#     ##
#     ##  @see llvm::ConstantDataArray::getString()

# proc constString*(str: cstring; length: cuint;dontNullTerminate: Bool): ValueRef {. cdecl, importc: "LLVMConstString", dynlib: LLVMlib.}
#     ##  Create a ConstantDataSequential with string content in the global context.
#     ##
#     ##  This is the same as LLVMConstStringInContext except it operates on the
#     ##  global context.
#     ##
#     ##  @see LLVMConstStringInContext()
#     ##  @see llvm::ConstantDataArray::getString()

# proc isConstantString*(c: ValueRef): Bool {.cdecl, importc: "LLVMIsConstantString", dynlib: LLVMlib.}
#     ##  Returns true if the specified constant is an array of i8.
#     ##
#     ##  @see ConstantDataSequential::getAsString()

# proc getAsString*(c: ValueRef; length: ptr csize_t): cstring {.cdecl, importc: "LLVMGetAsString", dynlib: LLVMlib.}
#     ##  Get the given constant data sequential as a string.
#     ##
#     ##  @see ConstantDataSequential::getAsString()

# proc constStructInContext*(c: ContextRef; constantVals: ptr ValueRef; count: cuint;packed: Bool): ValueRef {.cdecl, importc: "LLVMConstStructInContext", dynlib: LLVMlib.}
#     ##  Create an anonymous ConstantStruct with the specified values.
#     ##
#     ##  @see llvm::ConstantStruct::getAnon()

# proc constStruct*(constantVals: ptr ValueRef; count: cuint;packed: Bool): ValueRef {. cdecl, importc: "LLVMConstStruct", dynlib: LLVMlib.}
#     ##  Create a ConstantStruct in the global Context.
#     ##
#     ##  This is the same as LLVMConstStructInContext except it operates on the
#     ##  global Context.
#     ##
#     ##  @see LLVMConstStructInContext()

# proc constArray*(elementTy: TypeRef; constantVals: ptr ValueRef;length: cuint): ValueRef {. cdecl, importc: "LLVMConstArray", dynlib: LLVMlib.}
#     ##  Create a ConstantArray from values.
#     ##
#     ##  @see llvm::ConstantArray::get()

# proc constNamedStruct*(structTy: TypeRef; constantVals: ptr ValueRef; count: cuint): ValueRef {. cdecl, importc: "LLVMConstNamedStruct", dynlib: LLVMlib.}
#     ##  Create a non-anonymous ConstantStruct from values.
#     ##
#     ##  @see llvm::ConstantStruct::get()

# proc getElementAsConstant*(c: ValueRef; idx: cuint): ValueRef {.cdecl, importc: "LLVMGetElementAsConstant", dynlib: LLVMlib.}
#     ##  Get an element at specified index as a constant.
#     ##
#     ##  @see ConstantDataSequential::getElementAsConstant()

# proc constVector*(scalarConstantVals: ptr ValueRef; size: cuint): ValueRef {.cdecl, importc: "LLVMConstVector", dynlib: LLVMlib.}
#     ##  Create a ConstantVector from values.
#     ##
#     ##  @see llvm::ConstantVector::get()
